--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "objbox",
-	"version": "1.2.8",
+	"version": "1.2.9",
 	"description": "基于typescript装饰器的轻量级IOC容器",
 	"main": "index.js",
 	"directories": {
@@ -8,7 +8,8 @@
 		"test": "test"
 	},
 	"scripts": {
-		"compile": "tsc -p ./tsconfig.json"
+		"compile": "tsc -p ./tsconfig.json",
+		"demo":"node ./demo/logAnnotationDemo/demo.js"
 	},
 	"bin": "./cmd/objboxCmd.js",
 	"keywords": [
@@ -22,7 +23,7 @@
 		"组件"
 	],
 	"author": "KINGAndWL",
-	"license": "ISC",
+	"license": "MIT",
 	"dependencies": {
 		"@types/fs-extra": "^11.0.1",
 		"@types/node": "^18.11.18",
