--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "objbox",
-	"version": "1.2.9",
+	"version": "1.3.0",
 	"description": "基于typescript装饰器的轻量级IOC容器",
 	"main": "index.js",
 	"directories": {
@@ -9,7 +9,7 @@
 	},
 	"scripts": {
 		"compile": "tsc -p ./tsconfig.json",
-		"demo":"node ./demo/logAnnotationDemo/demo.js"
+		"demo": "node ./demo/logAnnotationDemo/demo.js"
 	},
 	"bin": "./cmd/objboxCmd.js",
 	"keywords": [
@@ -24,9 +24,8 @@
 	],
 	"author": "KINGAndWL",
 	"license": "MIT",
-	"dependencies": {
+	"devDependencies": {
 		"@types/fs-extra": "^11.0.1",
-		"@types/node": "^18.11.18",
-		"fs-extra": "^11.1.1"
+		"@types/node": "^18.15.12"
 	}
 }
