--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "objbox",
-	"version": "1.3.16",
+	"version": "1.3.17",
 	"description": "基于typescript装饰器的轻量级IOC容器",
 	"main": "index.js",
 	"directories": {
@@ -8,7 +8,7 @@
 		"test": "test"
 	},
 	"scripts": {
-		"compile": "tsc -p ./tsconfig.json",
+		"compile": "yarn tsc -p ./tsconfig.json",
 		"demo": "node ./demo/logAnnotationDemo/demo.js"
 	},
 	"bin": "./cmd/objboxCmd.js",
@@ -26,6 +26,7 @@
 	"license": "MIT",
 	"devDependencies": {
 		"@types/fs-extra": "^11.0.1",
-		"@types/node": "^18.15.12"
+		"@types/node": "^18.15.12",
+		"typescript": "^5.0.4"
 	}
 }
