--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
 	"version": "1.7.0",
 	"description": "基于typescript装饰器的轻量级IOC容器",
 	"main": "index.js",
+	"repository": {
+		"url": "https://github.com/KINGANDWL/ObjBox"
+	},
 	"directories": {
 		"example": "example",
 		"test": "test"
